# book_agent

./: .gitignore  PROJECT.md  README.md  book_agent_tools.py  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: book-agent-mcp.mdc  book-agent.mdc
.cursor/skills/book-agent-artifacts/: SKILL.md
apps/web/: .book_agent_web.json  README.md  package-lock.json  package.json
apps/web/public/: app.js  index.html  styles.css
apps/web/src/: agent-backend.ts  app.ts  persistence.ts  server.ts
apps/web/src/backends/: cursor-sdk-backend.ts  echo-backend.ts
apps/web/test/: app.test.ts  echo-backend.test.ts
apps/web/test-workspace/: project.json  project.session.json
book_agent/: __init__.py  agent_tools.py  api.py  cli.py  config.py  core.py  cursor_setup.py  markdown_index.py  mcp_server.py  models.py  path_utils.py  sync_rule.py  tool_registry.py
book_agent/backends/: __init__.py  base.py  pymupdf_backend.py
book_agent/llm/: __init__.py  base.py  openrouter.py
book_agent/tools/: __init__.py  config.py  figure.py  index.py  read.py  search.py  toc.py  web_fetch.py  web_search.py
docs/: AGENT_CAPABILITIES.md  BOOK_AGENT_TOOLS.md  LAYOUT_AND_CHAPTERS.md  PDF_MARKDOWN_DUAL_VIEW.md  PHASE1_MARKDOWN_CONVERSION.md  PLAN_NEXT_STEPS.md  PRD_WEB_APP_CURSOR_SDK.md  TEMO_APP_WORKFLOW_IMPLEMENTATION_TASK.md  TEMP_PERSISTENCE_SESSION.md  TEMP_UI_POLISH_SESSION.md  TODO_INDEX_PDF_ALIGNMENT.md  USAGE.md  backlog.md  overview.md  tasks.md
docs/archive/: AGENT_CAPABILITIES.md  DEEP_REVIEW_ecf4396.md  PLAN_NEXT_STEPS.md  README.md  tasks.md
docs/design/: CONFIG_AND_WORKSPACE.md  EXTERNAL_MODELS_AND_AGENTS_AS_TOOLS.md  INDEXING_AND_TOC.md  LLM_BACKEND.md  MCP_SERVER.md  TOOL_IMAGE_FIGURE.md  TOOL_WEB_FETCH.md  TOOL_WEB_SEARCH.md
scripts/: convert_example_books.py  sync_rule_from_registry.py
